--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/anhdthe141459/quan_ly_nhan_vien_BE#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "mongoose": "^8.7.0"
   },
