--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.12.0",
+    "mongodb-client-encryption": "^6.0.0",
     "mongoose": "^8.7.0",
     "node-cron": "^3.0.3",
     "xlsx": "^0.18.5"
